--- a/_layouts/invitados.html
+++ b/_layouts/invitados.html
@@ -13,8 +13,8 @@
             <div class="row">
                 <div class="nine columns" style="margin-bottom: 10px">
                     <ul id="menu-header" class="nav-bar horizontal">
-                        <li><a href="{{"index.html | relative_url }}">Inicio</a></li>
-                        <li><a href="{{"invitados/index.html | relative_url }}">Invitados</a></li>
+                        <li><a href="{{ "/" | relative_url }}">Inicio</a></li>
+                        <li><a href="{{"invitados/index.html" | relative_url }}">Invitados</a></li>
                     </ul>
                     <div style="clear:both"> </div>
                 </div>
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="twelve columns">
                     <ul id="menu3" class="footer_menu horizontal">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="{{ "/" | relative_url }}">Home</a></li>
                     </ul>
                 </div>
             </div>
