--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@
             </div>
             <div class="row">
                 <div class="four columns">
-                    <h3>Comparte con Nosotros</h3>
+                    <h3>Comparte con Nosotros este día inolvidable</h3>
                     <p>Queremos que seas parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.
                     </p>
                     <!--a class="button round" href="#">More &raquo;</a-->
