--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4,7 +4,7 @@ body {background: url(../images/baby-shower-back-ground.jpg) fixed; background-p
 .blur {border-radius: 10px}
 
 p {color: #38525a}
-h1,h2,h3,h4 {font-family:'Ranchers',sans-serif; font-weight: normal; color: #38525a}
+h1,h2,h3,h4 {font-family:'Ranchers',sans-serif; font-weight: normal; color: #a577c6}
 
 .panel {background: #fafafa}
 
