--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="four columns">
                     <h3>Comparte con Nosotros este día inolvidable</h3>
-                    <p>Queremos que seas parte de esta celebración que estamos haciendo para la llegada de nuestra querida Juliette.
+                    <p>Acompáñanos y se parte de esta celebración en honor a la llegada de nuestra pequeña Juliette .
                     </p>
                     <!--a class="button round" href="#">More &raquo;</a-->
                 </div>
@@ -65,8 +65,8 @@
                 </div>
                 <div class="four columns">
                     <h3>Día</h3>
-                    <p>6 de Marzo de 2021 <br> 2:00 p. m. <br> Romualdo Gallardo 1317 <br> Lucio Blanco, Playas de
-                        Rosarito.</p>
+                    <p>Sabado 6 de Marzo de 2021 <br> 2:00 p. m. <br> Romualdo Gallardo 1317 <br> Lucio Blanco, Playas de
+                        Rosarito</p>
                     <p>Confirmar asistencia.</p>
                     <a class="button round" href="https://wa.me/5216618507063?text=Hola%20Baby%20Juliette">WhatsApp
                         &raquo;</a>
