--- a/_layouts/invitados.html
+++ b/_layouts/invitados.html
@@ -19,7 +19,7 @@
                     <div style="clear:both"> </div>
                 </div>
                 <div class="three columns">
-                    <img src="{{"images/logo.png" | relative_url }}" alt="" style="padding-top: 26px">
+                    <img src="{{"images/Baby-Shower.png" | relative_url }}" alt="" style="padding-top: 26px">
                 </div>
             </div>
             <!-- end menu row (header) -->
